--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/platform-server": "~12.1.3",
     "@angular/router": "~12.1.3",
     "@nguniversal/express-engine": "^12.1.0",
+    "@sanity/block-content-to-html": "^2.0.0",
+    "@sanity/client": "^2.13.0",
+    "@sanity/image-url": "^0.140.22",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
