--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@angular/compiler": "~12.1.3",
     "@angular/core": "~12.1.3",
     "@angular/forms": "~12.1.3",
+    "@angular/material": "^12.2.6",
     "@angular/platform-browser": "~12.1.3",
     "@angular/platform-browser-dynamic": "~12.1.3",
     "@angular/platform-server": "~12.1.3",
     "@angular/router": "~12.1.3",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nguniversal/express-engine": "^12.1.0",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^2.13.0",
